--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^4.1.0",
     "react": "^18.2.0",
